--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <title>ProHUB Mobile Test</title>
+	<link rel="apple-touch-icon" href="/img/touch-icon-iphone.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/img/touch-icon-ipad.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/img/touch-icon-iphone-retina.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/img/touch-icon-ipad-retina.png">
+	<link rel="apple-touch-startup-image" href="/img/startup.png">
+
+
+	<link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
